CKA/question_11_network_policy_2/backend-pod.yaml
apiVersion: v1
kind: Pod
metadata:
  name: mysql-pod
  namespace: project-a
spec:
  containers:
  - name: mysql-container
    image: mysql:latest
    ports:
    - containerPort: 3306
