CKA/question_11_network_policy_2/frontend-pod.yaml
apiVersion: v1
kind: Pod
metadata:
  name: frontend-app
  namespace: project-b
  labels:
    tier: frontend
spec:
  containers:
  - name: frontend-app-container
    image: nginx:latest
    ports:
    - containerPort: 80
