CKA/question_11_network_policy_2/network-policy.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: namespaced-network-policy
  namespace: project-a
spec:
  podSelector:
    matchLabels:
      tier: db
  policyTypes:
  - Ingress
  ingress:
  - from:
    - namespaceSelector:
        matchLabels:
          project: project-b
    - podSelector:
        matchLabels:
          tier: application
    ports:
    - protocol: TCP
      port: 3306
